added sections, text area, and save buttons for each hour

--- a/index.html
+++ b/index.html
@@ -25,127 +25,74 @@
   </head>
 
   <body>
+    
     <header class="p-5 mb-4">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container-fluid px-5">
+    
+    <section class="container-fluid px-5">
   
-      <div id="hour9" class="row time-block">
-        <!-- Div to show the hour -->
-        <div class="col-md-1 hour">
-          9AM
-        </div>
-        <!-- Place to write task -->
-        <textarea class="col-md-10 description">
-        </textarea>
-        <!-- Save button -->
-        <button class="col-md-1 btn saveBtn"><i class="fas fa-save"></i>Save</button>
-      </div>
+      <section id="hour9" class="row time-block">
+        <section class="col-md-1 hour">9AM</section>
+        <textarea class="col-md-10 description"></textarea>
+       <button class="col-md-1 btn saveBtn"><i class="fas fa-save"></i>Save</button>
+      </section>
 
-      <div id="hour10" class="row time-block">
-        <!-- Div to show the hour -->
-        <div class="col-md-1 hour">
-          10AM
-        </div>
-        <!-- Place to write task -->
-        <textarea class="col-md-10 description">
-        </textarea>
-        <!-- Save button -->
+      <section id="hour10" class="row time-block">
+        <section class="col-md-1 hour">10AM</section>
+        <textarea class="col-md-10 description"></textarea>
         <button class="col-md-1 btn saveBtn"><i class="fas fa-save"></i>Save</button>
-      </div>
+      </section>
 
-      <div id="hour11" class="row time-block">
-        <!-- Div to show the hour -->
-        <div class="col-md-1 hour">
-          11AM
-        </div>
-        <!-- Place to write task -->
-        <textarea class="col-md-10 description">
-        </textarea>
-        <!-- Save button -->
+      <section id="hour11" class="row time-block">
+        <section class="col-md-1 hour">11AM</section>
+        <textarea class="col-md-10 description"></textarea>
         <button class="col-md-1 btn saveBtn"><i class="fas fa-save"></i>Save</button>
-      </div>
+      </section>
 
-      <div id="hour12" class="row time-block">
-        <!-- Div to show the hour -->
-        <div class="col-md-1 hour">
-          12PM
-        </div>
-        <!-- Place to write task -->
-        <textarea class="col-md-10 description">
-        </textarea>
-        <!-- Save button -->
+      <section id="hour12" class="row time-block">
+        <section class="col-md-1 hour">12PM</section>
+        <textarea class="col-md-10 description"></textarea>
         <button class="col-md-1 btn saveBtn"><i class="fas fa-save"></i>Save</button>
-      </div>
+      </section>
 
-      <div id="hour13" class="row time-block">
-        <!-- Div to show the hour -->
-        <div class="col-md-1 hour">
-          1PM
-        </div>
-        <!-- Place to write task -->
-        <textarea class="col-md-10 description">
-        </textarea>
-        <!-- Save button -->
+      <section id="hour1" class="row time-block">
+        <section class="col-md-1 hour">1PM</section>
+        <textarea class="col-md-10 description"></textarea>
         <button class="col-md-1 btn saveBtn"><i class="fas fa-save"></i>Save</button>
-      </div>
+      </section>
 
-      <div id="hour14" class="row time-block">
-        <!-- Div to show the hour -->
-        <div class="col-md-1 hour">
-          2PM
-        </div>
-        <!-- Place to write task -->
-        <textarea class="col-md-10 description">
-        </textarea>
-        <!-- Save button -->
+      <section id="hour2" class="row time-block">
+        <section class="col-md-1 hour">2PM</section>
+        <textarea class="col-md-10 description"></textarea>
         <button class="col-md-1 btn saveBtn"><i class="fas fa-save"></i>Save</button>
-      </div>
+      </section>
 
-      <div id="hour15" class="row time-block">
-        <!-- Div to show the hour -->
-        <div class="col-md-1 hour">
-          3PM
-        </div>
-        <!-- Place to write task -->
-        <textarea class="col-md-10 description">
-        </textarea>
-        <!-- Save button -->
+      <section id="hour3" class="row time-block">
+        <section class="col-md-1 hour">3PM</section>
+        <textarea class="col-md-10 description"></textarea>
         <button class="col-md-1 btn saveBtn"><i class="fas fa-save"></i>Save</button>
-      </div>
+      </section>
 
-      <div id="hour16" class="row time-block">
-        <!-- Div to show the hour -->
-        <div class="col-md-1 hour">
-          4PM
-        </div>
-        <!-- Place to write task -->
-        <textarea class="col-md-10 description">
-        </textarea>
-        <!-- Save button -->
+      <section id="hour4" class="row time-block">
+        <section class="col-md-1 hour">4PM</section>
+        <textarea class="col-md-10 description"></textarea>
         <button class="col-md-1 btn saveBtn"><i class="fas fa-save"></i>Save</button>
-      </div>
+      </section>
 
-      <div id="hour17" class="row time-block">
-        <!-- Div to show the hour -->
-        <div class="col-md-1 hour">
-          5PM
-        </div>
-        <!-- Place to write task -->
-        <textarea class="col-md-10 description">
-        </textarea>
-        <!-- Save button -->
+      <section id="hour5" class="row time-block">
+        <section class="col-md-1 hour">5PM</section>
+        <textarea class="col-md-10 description"></textarea>
         <button class="col-md-1 btn saveBtn"><i class="fas fa-save"></i>Save</button>
-      </div>
-    </div>
+      </section>
+    </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
-    crossorigin="anonymous"></script>
-
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js" integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+    <script src="./js/script.js"></script>
+ 
   </body>
+
 </html>
