--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
     
-    <header class="p-5 mb-4">
+    <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     
     <section class="container-fluid px-5">
   
@@ -58,13 +59,13 @@
         <button class="col-md-1 btn saveBtn"><i class="fas fa-save"></i>Save</button>
       </section>
 
-      <section id="hour1" class="row time-block">
+      <section id="hour13" class="row time-block">
         <section class="col-md-1 hour">1PM</section>
         <textarea class="col-md-10 description"></textarea>
         <button class="col-md-1 btn saveBtn"><i class="fas fa-save"></i>Save</button>
       </section>
 
-      <section id="hour2" class="row time-block">
+      <section id="hour14" class="row time-block">
         <section class="col-md-1 hour">2PM</section>
         <textarea class="col-md-10 description"></textarea>
         <button class="col-md-1 btn saveBtn"><i class="fas fa-save"></i>Save</button>
